tests/transpiler/x/zig/match_full.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/match_full.zig:13:26: error: cannot compare strings with ==
